<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016-2017 wangchenyan
     Copyright (C) 2016-2017 The MoKee Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name" translatable="false">Polyhymnia</string>
    <string name="version_name" translatable="false">1.0.0</string>
    <string name="version_code" translatable="false">100</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="no_music">Unable to find music</string>
    <string name="loading">Loading</string>
    <string name="load_fail">Failed to load.Please check your network connection and try again later.</string>
    <string name="local_music">My Music</string>
    <string name="online_music">Online Music</string>
    <string name="online_flagship">Title Track</string>
    <string name="online_hot_song_list_title">Baidu Top Tracks</string>
    <string name="online_hot_song_list_comment">The list is an automatically-generated data list based on the play amounts of the songs on Baidu Music platform weekly.The statistical range is all the songs on Baidu Music platform and the data will be updated once a day.</string>
    <string name="online_hot_song_list_update_timie">Last update: 2017-01-01</string>
    <string name="unknown">Unknown</string>
    <string name="delete_music">Delete %s ?</string>
    <string name="setting_ringtone_success">The ringtone is set successfully!</string>
    <string name="no_local_music">No music found.</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="song_name">Song</string>
    <string name="song_artist">Artist - Album</string>
    <string name="mode_loop">Playlist Loops</string>
    <string name="mode_shuffle">Shuffle Playback</string>
    <string name="mode_one">Single Cycle</string>
    <string name="play_time_start">00:00</string>
    <string name="now_play">Playing: %s</string>
    <string name="now_download">Downloading: %s</string>
    <string name="download_success">%s downloaded successfully!</string>
    <string name="recent_update">Recently updated: %s</string>
    <string name="unable_to_play">Unable to play</string>
    <string name="unable_to_download">Unable to download</string>
    <string name="unable_to_share">Unable to share</string>
    <string name="artist_info">Artist information</string>
    <string name="artist_info_name">Name: %s</string>
    <string name="artist_info_country">Nationality: %s</string>
    <string name="artist_info_constellation">Constellation: %s</string>
    <string name="artist_info_stature">Height: %s cm</string>
    <string name="artist_info_weight">Weight: %s kg</string>
    <string name="artist_info_birth">Birthday: %s</string>
    <string name="artist_info_intro">Introduction: %s</string>
    <string name="artist_info_empty">No artist information</string>
    <string name="share_music">Share with %1$s 《%2$s》 %3$s</string>
    <string name="search_tips">Songs or Artists</string>
    <string name="search_empty">No results found</string>
    <string name="menu_search">Search Online</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_share">Recommend to your friends</string>
    <string name="menu_about">About</string>
    <string name="menu_night">Night Mode</string>
    <string name="menu_timer">Sleep Timer</string>
    <string name="menu_exit">Exit</string>
    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="network">Network</string>
    <string name="mobile_network_play">Play with cellular data</string>
    <string name="mobile_network_download">Download with cellular data</string>
    <string name="play">Play</string>
    <string name="sound_effect">Sound Effects</string>
    <string name="tips">Tips</string>
    <string name="play_tips">You are using cellular data now and may be subject to data charges.Are you sure you want to play with cellular data?</string>
    <string name="play_tips_sure">Sure</string>
    <string name="download_tips">You are using cellular data now and may be subject to data charges.Are you sure you want to download with cellular data?</string>
    <string name="download_tips_sure">Sure</string>
    <string name="device_not_support">Unsupported</string>
    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="timer_set">Setup is complete.It will turn off after %s minutes.</string>
    <string name="timer_cancel">Timed has been canceled.</string>
    <string name="share_app">Young,crazy and freewheeling!Wear your headphones and BE YOURSELF,which is the magic of music. %s: http://fir.im/ponymusic</string>
    <string name="copyright">Copyright © 2015&#045;2016 SWUST</string>
    <string name="about_project_url">https://github.com/ChanWong21/PonyMusic</string>
    <string name="about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="about_github">https://github.com/ChanWong21</string>
    <string name="no_permission">没有%1$s权限，无法%2$s！</string>
</resources>
