<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016-2017 wangchenyan
     Copyright (C) 2016-2017 The MoKee Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="version"
            android:summary="v 1.0"
            android:title="当前版本" />
        <Preference
            android:key="update"
            android:title="检查更新" />
        <Preference
            android:key="share"
            android:title="@string/menu_share" />
        <Preference
            android:key="star"
            android:summary="前往项目地址给个Star，鼓励作者"
            android:title="给我点赞" />
    </PreferenceCategory>
    <PreferenceCategory android:title="关于作者">
        <Preference
            android:key="weibo"
            android:summary="@string/about_weibo"
            android:title="微博" />
        <Preference
            android:key="jianshu"
            android:summary="@string/about_jianshu"
            android:title="简书" />
        <Preference
            android:key="github"
            android:summary="@string/about_github"
            android:title="Github" />
    </PreferenceCategory>
    <PreferenceCategory android:title="版权">
        <Preference
            android:summary="百度音乐"
            android:title="在线音乐" />
        <Preference
            android:summary="高德地图"
            android:title="天气数据" />
    </PreferenceCategory>
</PreferenceScreen>